--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tscopy",
-  "version": "1.0.0",
+  "version": "0.0.4",
   "description": "Copy a typescript project from somewhere to otherwhere. Just like `cp` but patch import syntaxes.",
   "main": "index.js",
   "type": "module",
@@ -16,10 +16,11 @@
   },
   "keywords": [
     "typescript",
+    "ts",
     "copy"
   ],
   "author": "zphhhhh",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "minimatch": "^3.0.2 || ^4 || ^5",
     "typescript": "^4"
